# routelight

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: technical-blueprint.md
routelight/: README.md  RELEASE_NOTES_v0.1.0-rc1.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  generate_icons.py  package-lock.json  package.json
routelight/src/: index.html  main.js  styles.css
routelight/src-tauri/: Cargo.toml  tauri.conf.json
routelight/src-tauri/capabilities/: default.json
routelight/src-tauri/icons/: icon.icns
routelight/src-tauri/nsis/: hooks.nsh  installer-template.nsi
routelight/src-tauri/src/: app_state.rs  lib.rs  main.rs  tray_status.rs
routelight/src-tauri/src/probe/: ai_probe.rs  ip_probe.rs  local_probe.rs  mod.rs
