[package]
name = "routelight"
version = "0.2.0"
description = "A lightweight Windows tray utility for monitoring network route status and AI service reachability."
authors = ["Chris Liu"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "routelight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros"] }
winreg = "0.52"
ipconfig = "0.3"
tauri-plugin-notification = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"
